# Power-Trading-application

./: .dockerignore  .env  .env.example  .env.login.example  .gitignore  AGENTS.md  CURRENT_STATUS.md  DASHBOARD_GUIDE.md  DEMO_READY.md  DEPLOY_TO_RAILWAY.md  Dockerfile  FINAL_DEMO_GUIDE.md  LEARNING_NOTES.md  LICENSE  PARSERS_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  RAILWAY_STATUS.md  README.md  README_FOR_COFOUNDER.md  STATUS_NOW.md  STORY_3_COMPLETE.md  UI_GUIDE.md  calculate_energy_schedules.py  check_energy_schedule_data.py  check_railway_status.py  check_report_types.py  complete_railway_deploy.bat  convert_xls.py  create_package.sh  create_package_simple.sh  deploy_to_railway.bat  direct_insert_7day_mock.py  final_fix_railway.py  generate_7day_mock_data.py  generate_mock_reports.py  generate_proper_mock_data.py  generate_sch_files.py  get_urls.sh  (+33 more)
.githooks/: pre-push
agents/: README.md  (+1 more)
energy-platform/services/excel-consumption-service/: Dockerfile  README.md  alembic.ini  pyproject.toml  service.yaml
energy-platform/services/excel-consumption-service/alembic/: env.py
energy-platform/services/excel-consumption-service/alembic/versions/: 20260627_01_initial_schema.py
energy-platform/services/excel-consumption-service/data/: alembic_verify.db  excel_consumption.db  runtime_demo.db
energy-platform/services/excel-consumption-service/data/uploads/: e95461fa-e2dc-4fce-af1c-742b7a401ac7.xlsx
energy-platform/services/excel-consumption-service/src/excel_consumption_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1660 files in other folders)
