[project]
name = "excel-consumption-service"
version = "0.1.0"
description = "Workbook ingestion and Solar Working calculation service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.41",
  "psycopg[binary]>=3.2.9",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "alembic>=1.16.0",
  "PyJWT>=2.9.0",
  "openpyxl>=3.1.5",
  "python-multipart>=0.0.20"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
